2003-05-04  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (sn_load_xref, sn_create_new_project,
	sn_parse_uptodate): Add a new cbrowser_xref
	argument to the sn_load_xref procedure. If this
	argument is true, cbrowser2 is run over the
	xref output before passing the data to dbimp.
	If the argument is false, the output of the
	parsers is passed directly to dbimp. Check to
	see if a C/C++ file will be parsed in the
	sn_create_new_project and sn_parse_uptodate
	methods and call sn_load_xref accordingly.

2003-05-04  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (sn_create_new_project):
	Move the call to sn_set_tmp_dir before the
	sn_tmpFileName call that gets a tmp file name
	for the xref tmp file. This creates the tmp
	file that is passed as the -x option to the
	parser in the .snprj directory instead of
	/tmp on Unix systems.

2003-05-03  Mo DeJong  <mdejong@users.sourceforge.net>

	* MAINTAINERS: Update Mo's email address.

2003-05-03  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/libjcreuse/Errors.c: Include
	string.h to avoid compiler warning.
	* parsers/python/pybrowser.c: Regen.
	* parsers/python/pybrowser.l: Define YY_SKIP_YYWRAP
	to avoid compiler warning.

2003-05-03  Mo DeJong  <mdejong@users.sourceforge.net>

	Rework flex invocations via the "make flexgen"
	target so that generated .c files include only
	the file name of the .l file instead of the
	fully qualified path. Also, generate
	the c files directly in the srcdir.

	* hyper/Makefile.am:
	* hyper/Makefile.in: Regen.
	* hyper/c_high.c: Regen.
	* hyper/ch_high.c: Regen.
	* hyper/j_high.c: Regen.
	* hyper/py_high.c: Regen.
	* hyper/tcl_high.c: Regen.
	* parsers/assembly/ppc601-eabi/Makefile.am:
	* parsers/assembly/ppc601-eabi/Makefile.in: Regen.
	* parsers/assembly/ppc601-eabi/abrowser.c: Regen.
	* parsers/chill/Makefile.am:
	* parsers/chill/Makefile.in: Regen.
	* parsers/m4/Makefile.am:
	* parsers/m4/Makefile.in: Regen.
	* parsers/m4/m4browser.c: Regen.